styles.css
* {
    font-family: Roboto;
}

body {
    height: 100vh;
    margin: 0px;
}

header {
    background-color: #1F2937;
    display: flex;
    justify-content: space-between;
    padding: 20px 180px;
}

.header-left {
    font-size: 24px;
    color: #F9FAF8;
}

.header-right a {
    font-size: 18px;
    color: #E5E7EB;
    text-decoration: none;
    margin: 0px 15px;
}

.hero {
    background-color: #1F2937;
    padding: 100px 180px;
    display: flex;
}

.hero-left {
    display: flex;
    flex-direction: column;
    flex: 1;
    margin-right: 25px;
}

.hero-left h1 {
    font-size: 48px;
    font-weight: 800;
    color: #E5E7EB;
    margin: 0px;
}

.hero-left p {
    font-size: 18px;
    color: #E5E7EB;
    margin: 18px 0px;
}

button {
    background-color: #3882F6;
    color: #F9FAF8;
    padding: 5px 20px;
    border-radius: 7px;
}

.hero-left button {
    width: 30%;
    border: none;
}

.hero-right {
    flex: 1;
    background-color: darkgrey;
    color: #E5E7EB;
    display: flex;
    align-items: center;
    justify-content: center;
}

.info {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 20px 200px 100px 200px;
}

.info-header {
    font-size: 36px;
    font-weight: 800;
    color: #1F2937;
}

.info-subsec {
    display: flex;
    flex-direction: row;
}

.info-tile {
    width: 165px;
    height: 240px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 30px;
}

.empty-box {
    width: 155px;
    height: 155px;
    border: 5px solid #3882F6;
    border-radius: 15px;
}

.info-tile p {
    text-align: center;
    font-size: 18px;
    color: #1F2937;
    margin: 10px;
}

.quote {
    padding: 100px 200px;
    background-color: #E5E7EB;
    display: flex;
    align-items: center;
    justify-content: center;
}

.quote-content {
    display: flex;
    flex-direction: column;
}

.quote-body {
    text-align: left;
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
    color: #1F2937;
    margin: 0px;
}

.quote-attr {
    font-size: 24px;
    font-weight: 800;
    color: #1F2937;
    text-align: right;
}

.cta {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 100px 200px;
}

.cta-con {
    background-color: #3882F6;
    border-radius: 10px;
    flex: 1;
    padding: 50px 100px;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.cta-text {
    display: flex;
    flex-direction: column;
    color: white;
}

.cta-text h2 {
    font-size: 24px;
    margin: 0px;
}

.cta-text p {
    font-size: 18px;
    margin: 0px;
}

.cta-con button {
    border: 2px solid white;
    margin-bottom: 7px;
    width: 100px;
}

footer {
    background-color:#1F2937;
    color: #E5E7EB;
    display: flex;
    justify-content: center;;
    align-items: center;
    padding: 30px 0px;
}

